# R-Type

./: CMakeLists.txt  Makefile  README.md  conanfile.txt  run.sh
Client/NewClient/: main.cpp
Client/NewClient/src/Core/: Core.cpp  Input.cpp  RectButton.cpp  RessourceManager.cpp  TextScan.cpp  front_room.cpp
Client/NewClient/src/Core/include/: Button.hpp  Core.hpp  Input.hpp  Options.hpp  RectButton.hpp  RessourceManager.hpp  Structs.hpp  TextScan.hpp  Utils.hpp  front_room.hpp
Client/NewClient/src/ECS/: Coordinator.cpp  EntityManager.cpp
Client/NewClient/src/ECS/Systems/: AnimationSystem.cpp  DrawSystem.cpp  HandleInputSystem.cpp  NetworkHandlerSystem.cpp  SpeedApplicationSystem.cpp
Client/NewClient/src/ECS/Systems/include/: AnimationSystem.hpp  DrawSystem.hpp  HandleInputSystem.hpp  NetworkHandlerSystem.hpp  SpeedApplicationSystem.hpp
Client/NewClient/src/ECS/include/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  IComponentArray.hpp  ISystem.hpp
Client/NewClient/src/Explosion/: Explosion.cpp
Client/NewClient/src/Explosion/include/: Explosion.hpp
Client/NewClient/src/Game/: Game.cpp
Client/NewClient/src/Game/include/: Game.hpp
Client/NewClient/src/MainMenu/: MainMenu.cpp
Client/NewClient/src/MainMenu/include/: MainMenu.hpp
Client/NewClient/src/OptionsMenu/: OptionMenu.cpp
Client/NewClient/src/OptionsMenu/include/: OptionMenu.hpp
Client/NewClient/src/Player/: Player.cpp
Client/NewClient/src/Player/include/: Player.hpp
Client/NewClient/src/Shots/: PlayerShot.cpp
Client/NewClient/src/Shots/include/: PlayerShot.hpp
Monsters/: LoadMonsters.cpp
Monsters/Monster1/: Monster1.cpp
Monsters/Monster1/include/: Monster1.hpp
Monsters/Monster2/: Monster2.cpp
Monsters/Monster2/include/: Monster2.hpp
Monsters/Monster3/: Monster3.cpp
Monsters/Monster3/include/: Monster3.hpp
Monsters/include/: IMonster.hpp  LoadMonsters.hpp
Server/include/: AsioUdp.hpp  Client.hpp  Components.hpp  Exception.hpp  IUdp.hpp  Response.hpp  Room.hpp  RoomManager.hpp  Server.hpp  Types.hpp
Server/src/: AsioUdp.cpp  Client.cpp  Room.cpp  RoomManager.cpp  Server.cpp  main.cpp
Server/src/ECS/: ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  Event.cpp  EventManager.cpp  Sender.cpp  SystemManager.cpp
Server/src/ECS/Systems/: DestroySystem.cpp  GenerateMonstersSystem.cpp  GenerateShotSystem.cpp  HandleCollisionSystem.cpp  HandleInputSystem.cpp  HandleMonsterSpeed.cpp  HandleRequestsSystem.cpp  SpeedApplicationSystem.cpp
Server/src/ECS/Systems/include/: DestroySystem.hpp  GenerateMonstersSystem.hpp  GenerateShotSystem.hpp  HandleCollisionSystem.hpp  HandleInputSystem.hpp  HandleMonsterSpeed.hpp  HandleRequestsSystem.hpp  SpeedApplicationSystem.hpp
Server/src/ECS/include/: ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  ISystem.hpp  Sender.hpp  SystemManager.hpp
Server/src/Explosion/: Explosion.cpp
Server/src/Explosion/include/: Explosion.hpp
Server/src/Game/: Game.cpp
Server/src/Game/include/: Game.hpp
Server/src/Player/: Player.cpp
Server/src/Player/include/: Player.hpp
Server/src/Shots/: PlayerShot.cpp
Server/src/Shots/include/: PlayerShot.hpp
